--- a/basic.yaml
+++ b/basic.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   web:
-    image: nginx:1-alpine
+    image: nginx:stable-alpine3.21-perl
     expose:
       - 80
     # volumes:
