--- a/basic.yaml
+++ b/basic.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   web:
-    image: nginx:stable-alpine3.21-perl
+    image: docker.io/library/nginx:stable-alpine3.21-perl
     expose:
       - 80
     # volumes:
@@ -14,6 +14,7 @@ services:
       - traefik.http.routers.web-app.entrypoints=web
       - traefik.http.services.web-app.loadbalancer.server.port=80
     deploy:
+      replicas: 3
       placement:
         constraints:
           - node.labels.env==dev
