--- a/basic.yaml
+++ b/basic.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   web:
     image: docker.io/library/nginx:stable-alpine3.21-perl
-    expose:
+    ports:
       - 80
     # volumes:
     #   - ./html5up-stellar/:/usr/share/nginx/html
