--- a/basic.yaml
+++ b/basic.yaml
@@ -2,8 +2,8 @@ version: '3.8'
 services:
   web:
     image: docker.io/library/nginx:stable-alpine3.21-perl
-    ports:
-      - 80
+    # ports:
+    #   - 80
     # volumes:
     #   - ./html5up-stellar/:/usr/share/nginx/html
     networks:
